overflow fix
overflow-x fix on html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 /** Global Styles
 **/
-
+html{
+  overflow-x: hidden;
+}
 body{
   padding: 0;
   margin: 0;
